src/components/funnel/funnel.scss
.summary-funnel {
  display: grid;
  grid-gap: 0.5rem 0.5rem;

  & .summary-funnel-row {
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
    grid-column-gap: 1%;
    align-items: center;

    & .proportion-label {
      display: flex;
      flex: 4 2 auto;
      flex-wrap: nowrap;
      align-items: center;

      & .stats {
        display: flex;
        flex-direction: column;
        align-items: flex-end;
        text-align: right;
        z-index: 1;
        margin-right: 5%;
        flex: 2;
      }

      & span {
        &.counts {
          font-weight: bold;
          white-space: nowrap;
        }

        &.percent {
          color: var(--cronk-color-medium);
          font-size: 100%;
          font-family: monospace;
          white-space: nowrap;
        }

        &.label {
          text-transform: uppercase;
          min-width: 50%;
          display: inline-block;
          text-align: left;
          flex: 5;
        }
      }
    }
  }
}

